# arabica

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.sh
.github/workflows/: develop.yml
app/: main.cpp
arabica/cpu/: cpu.cpp  cpu.hpp
arabica/device/: sound.hpp
arabica/driver/: display.hpp  keypad.cpp  keypad.hpp  sound.hpp
arabica/emulator/: emulator.cpp  emulator.hpp
arabica/log/: log.hpp
arabica/memory/: memory.cpp  memory.hpp
arabica/ui/: window.cpp  window.hpp
test/cpu/: cpu_test_suite.hpp
test/driver/: keypad_test_suite.hpp
test/memory/: memory_test_suite.hpp
